<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="733dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@color/gray"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="220dp"
                android:layout_height="69dp"
                app:srcCompat="@drawable/logomairie" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueMigne"
            android:text="@string/quizz"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest"
            android:textAlignment="center"
            android:textColor="@color/black" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ninoferrer" />
        <Button
            android:id="@+id/aide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aide"
            android:textColor="@color/orange"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:background="@color/gray"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/Rb1"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rep2"
                    android:textColor="@color/black"/>
                <RadioButton
                    android:id="@+id/Rb2"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rep3"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/Rb3"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rep4"
                    android:textColor="@color/black"/>
                <RadioButton
                    android:id="@+id/Rb4"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rep5"
                    android:textColor="@color/black"/>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/Valider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valide"
            android:textColor="@color/orange"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/Retour"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/retour"
            android:textColor="@color/orange"
            android:textStyle="bold"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>