<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="733dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@color/gray"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="220dp"
                android:layout_height="69dp"
                app:srcCompat="@drawable/logomairie" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rep"
            android:textAlignment="center"
            android:textColor="@color/black" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/gray"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rep1"
                android:textColor="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:text="@string/affiche_rep"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hist"
                android:textColor="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="133dp"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="128dp"
                    android:layout_height="61dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mascote" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:text="@string/expli"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/Valider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valide"
            android:textColor="@color/orange"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
