<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="733dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@color/gray"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="220dp"
                android:layout_height="69dp"
                app:srcCompat="@drawable/logomairie" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold"/>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="387dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:text="@string/faire"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="93dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tps"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/nom"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/theme"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/acces1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acces"
                    android:onClick="launchMainActivity"
                    android:backgroundTint="@color/blueMigne"
                    android:drawableLeft="@drawable/travel"
                    tools:ignore="OnClick"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>


            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />
            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="93dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tps"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/nom"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/theme"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/acces2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/acces"
                    android:onClick="launchQuizzActivity"
                    android:backgroundTint="@color/blueMigne"
                    android:drawableLeft="@drawable/travel"
                    tools:ignore="OnClick"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="392dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:text="@string/fait"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="93dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tps"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/nom"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/theme"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/acces3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/acces"
                    android:drawableLeft="@drawable/travel"
                    tools:ignore="OnClick"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <LinearLayout
                android:layout_width="312dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@color/gray1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="93dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tps"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/nom"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:text="@string/theme"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/acces4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/acces"
                    android:drawableLeft="@drawable/travel"
                    tools:ignore="OnClick"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>